package rom.calculadora;

public interface Operacion {
    double ejecutar(double a, double b);
}